--- a/components/nav.html
+++ b/components/nav.html
@@ -1,13 +1,14 @@
 <div class="nav-container">
     <nav class="navbar" id="navbar">
-        <a href="index.html" class="logo">
+        <a href="/index.html" class="logo">
             <i class="fas fa-cannabis"></i> StrainNavigator
         </a>
         <ul class="nav-links" id="navLinks">
-            <li><a href="growhelp.html">Grow Help AI</a></li>
-            <li><a href="tracker.html">Strain Tracker</a></li>
-            <li><a href="seeds.html">Strain Seeds</a></li>
-            <li><a href="labels.html">AI Branding</a></li>
+            <li><a href="/tools/growhelp.html">Grow Help AI</a></li>
+            <li><a href="/tools/tracker.html">Strain Tracker</a></li>
+            <li><a href="/tools/seeds.html">Explore Strains</a></li>
+            <li><a href="/tools/labels.html">AI Branding</a></li>
+			<li><a href="/tools/growgame.html">Manage Grow</a></li>
         </ul>
         <div class="hamburger" id="hamburger">
             <i class="fas fa-bars"></i>
