--- a/components/nav.html
+++ b/components/nav.html
@@ -4,11 +4,11 @@
             <i class="fas fa-cannabis"></i> StrainNavigator
         </a>
         <ul class="nav-links" id="navLinks">
-            <li><a href="/tools/growhelp.html">Grow Help AI</a></li>
-            <li><a href="/tools/tracker.html">Strain Tracker</a></li>
-            <li><a href="/tools/seeds.html">Explore Strains</a></li>
-            <li><a href="/tools/labels.html">AI Branding</a></li>
-			<li><a href="/tools/growgame.html">Manage Grow</a></li>
+			<li><a href="/tools/growhelp.html">AI Grow Help</a></li>
+			<li><a href="/tools/tracker.html">Strain Tracker</a></li>
+			<li><a href="/tools/seeds.html">Explore Strains</a></li>
+			<li><a href="/tools/labels.html">AI Branding</a></li>
+			<li><a href="/tools/growitgame.html">Manage Grow</a></li>
         </ul>
         <div class="hamburger" id="hamburger">
             <i class="fas fa-bars"></i>
